# Aula09_2

./: README.md  etl.py  etl_run.py  main.py  pyproject.toml  utils_log.py
data/: output.parquet
