[project]
name = "aula09-2"
version = "0.1.0"
description = ""
authors = [
    {name = "ewbankleonardo",email = "ewbankv.leonardo@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.13"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
